# AtomVM

./: CMakeLists.txt
demo/: CMakeLists.txt  blinky.erl  dht_demo.erl  hello.erl  httpd_demo.erl  pingpong.erl  wifi_demo.erl
doc/: atomvm-ledc.md  atomvm.md  getting_started_guide.md  implementors_guide.md  programmers_guide.md
examples/erlang/: CMakeLists.txt  disterl.erl  system_info_server.erl  tcp_server.erl
examples/erlang/esp32/: CMakeLists.txt  api_server_example.erl  dht_example.erl  disterl_esp32.erl  sta_network.erl  tcp_server_blink.erl
libs/eavmlib/: disterld.erl  epmd.erl  gen_tcp_server.erl  rex.erl
libs/eavmlib/src/: CMakeLists.txt  api_handler.erl  avm_logger.erl  avm_util.erl  console.erl  dht.erl  http_server.erl  httpd.erl  json_encoder.erl  ledc_pwm.erl  system_info_api_handler.erl
libs/estdlib/src/: gen_server.erl  gen_tcp.erl  lists.erl  string.erl
libs/include/: httpd.hrl  logger.hrl
src/libAtomVM/: globalcontext.h  nifs.c  port.c  scheduler.c
tests/libs/eavmlib/: test_logger.erl
tests/libs/estdlib/: tests.erl
